<?xml version="1.0"?>
<package format="2">
  <name>explore_patrol</name>
  <version>0.0.0</version>
  <description>The explore_patrol package</description>
  <maintainer email="john_doe@example.com">JohnDje</maintainer>
  <license>ITMO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>

